# Microservices

restore-platform-stability/environment/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_sem.py
restore-platform-stability/environment/database/: schema.sql  seed.sql
restore-platform-stability/environment/database/migrations/: env.py
restore-platform-stability/environment/database/migrations/versions/: a7acbfe9ee60_initial_schema.py
restore-platform-stability/environment/metrics/: before.prom
restore-platform-stability/environment/monitoring/grafana/dashboards/: platform.json
restore-platform-stability/environment/monitoring/prometheus/: prometheus.yml
restore-platform-stability/environment/results/: degradation_alone_results.jsonl  hidden_replay_results.jsonl  normal_traffic_results.jsonl  recovery_results.jsonl  replay_alone_results.jsonl  replay_plus_degradation_results.jsonl
restore-platform-stability/environment/scripts/: bootstrap.sh  degrade.sh  healthcheck.sh  replay.sh  reset.sh  start.sh  wait-for-db.sh
restore-platform-stability/environment/services/gateway/: Dockerfile  README.md  pyproject.toml  requirements.txt
restore-platform-stability/environment/services/gateway/app/: __init__.py  main.py
restore-platform-stability/environment/services/gateway/service/: checkout_service.py
restore-platform-stability/environment/services/inventory/: Dockerfile  README.md  pyproject.toml  requirements.txt
restore-platform-stability/environment/services/inventory/app/: __init__.py  main.py
restore-platform-stability/environment/services/inventory/models/: schemas.py
restore-platform-stability/environment/services/inventory/service/: inventory_service.py
restore-platform-stability/environment/services/orders/: Dockerfile  README.md  pyproject.toml  requirements.txt
restore-platform-stability/environment/services/orders/app/: main.py
restore-platform-stability/environment/services/orders/models/: schemas.py
restore-platform-stability/environment/services/orders/service/: order_service.py
restore-platform-stability/environment/services/payments/: Dockerfile  README.md  pyproject.toml  requirements.txt
restore-platform-stability/environment/services/payments/app/: main.py
restore-platform-stability/environment/services/payments/models/: schemas.py
restore-platform-stability/environment/services/payments/service/: payment_service.py
restore-platform-stability/environment/services/shared/: README.md  __init__.py  pyproject.toml  requirements.txt
restore-platform-stability/environment/services/shared/clients/: __init__.py  base.py  services.py
restore-platform-stability/environment/services/shared/config/: settings.py
restore-platform-stability/environment/services/shared/db/: base.py  dependencies.py  session.py  utils.py
restore-platform-stability/environment/services/shared/errors/: exceptions.py
restore-platform-stability/environment/services/shared/logger/: README.md  __init__.py  context.py  custom_logger.py  logger.py
restore-platform-stability/environment/services/shared/metrics/: README.md  __init__.py  metrics.py  prometheus.py  router.py
restore-platform-stability/environment/services/shared/middleware/: README.md  __init__.py  fault_injection.py  logging.py
restore-platform-stability/environment/services/shared/models/: __init__.py  enums.py  inventory.py  order.py  payment.py
restore-platform-stability/environment/services/shared/redis/: client.py  (+1 more)
restore-platform-stability/environment/workload/: baseline.json  hidden_replay.json  normal.json  replay.json  replay_generator.py  spike.json  sustained.json  test.json
(+27 files in other folders)
