[build-system]
requires = ["setuptools>=70.0", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "payments"
version = "0.1.0"
description = "Payments service — processes payment transactions and manages payment records."
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "INFO"
